--- a/frontend/src/main/webapp/login.html
+++ b/frontend/src/main/webapp/login.html
@@ -6,37 +6,10 @@
   <title>Login - FiberGuardian</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="assets/css/fiberguardian_utils.css">
+  <link rel="stylesheet" href="assets/css/login.css">
+
 </head>
-<style>
-  html,
-  body {
-    height: 100%;
-    margin: 0;
-    padding: 0;
-    overflow: hidden;
-  }
-
-  body {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background-color: #f8f9fa;
-  }
-
-  .logo-svg {
-    max-height: 180px;
-    width: auto;
-  }
-
-  .card {
-    width: 100%;
-    max-width: 400px;
-  }
-
-  #mensagemSistema {
-    font-size: 0.9rem;
-  }
-</style>
 
 <body class="bg-light">
 
@@ -211,8 +184,8 @@
           </button>
         </div>
 
-        <!-- ALERTA VISIBLE SEM SCROLL -->
-        <div id="mensagemSistema" class="alert d-none mt-3" role="alert"></div>
+        <!-- Área de mensagem -->
+        <div id="mensagemSistema" class="alert mensagem-feedback" role="alert"></div>
       </form>
     </div>
   </div>
