--- a/frontend/src/main/webapp/tela_esqueci_senha.html
+++ b/frontend/src/main/webapp/tela_esqueci_senha.html
@@ -7,6 +7,8 @@
     <title>Recuperar Senha - FiberGuardian</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <!-- Bootstrap Bundle (com Modal e Popper) -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" rel="stylesheet">
     <link rel="stylesheet" href="assets/css/fiberguardian_utils.css">
     <link rel="stylesheet" href="assets/css/tela_esqueci_senha.css">
@@ -44,8 +46,9 @@
                 </div>
             </form>
 
-            <!-- Área de mensagem -->
+            <!-- Área de mensagem
             <div id="mensagemSupervisor" class="alert mensagem-feedback" role="alert"></div>
+            -->
 
             <!-- Seção 2: Formulário de redefinição de senha (inicialmente escondido) -->
             <form id="formNovaSenha" class="d-none">
@@ -67,7 +70,9 @@
                         <i class="fa-solid fa-key me-1"></i> Redefinir Senha
                     </button>
                 </div>
+                <!-- Área de mensagem
                 <div id="mensagemRedefinicao" class="alert mensagem-feedback" role="alert"></div>
+                -->
             </form>
 
         </div>
@@ -83,6 +88,27 @@
         */
         FiberGuardian.TelaEsqueciSenha.init();
     </script>
+    <!-- Modal de Alerta Global -->
+    <div class="modal fade" id="modalMensagemSistema" tabindex="-1" aria-labelledby="modalMensagemSistemaTitulo"
+        aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered">
+            <div class="modal-content">
+                <div class="modal-header bg-warning text-dark">
+                    <h5 class="modal-title" id="modalMensagemSistemaTitulo">Aviso</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Fechar"></button>
+                </div>
+                <div class="modal-body text-pre-wrap">
+                    <!-- Conteúdo da mensagem será inserido via JS -->
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-primary" data-bs-dismiss="modal">OK</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+
 </body>
 
 </html>
