--- a/frontend/src/main/webapp/tela_alteracao_cadastro_usuario.html
+++ b/frontend/src/main/webapp/tela_alteracao_cadastro_usuario.html
@@ -8,8 +8,10 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
     />
+    <!-- Bootstrap Bundle (com Modal e Popper) -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <link
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
       rel="stylesheet"
     />
     <link href="assets/css/fiberguardian_utils.css" rel="stylesheet" />
@@ -83,17 +85,9 @@
           <button type="submit" class="btn btn-primary w-100 mb-3">
             <i class="fas fa-user-edit me-2"></i>Salvar Dados
           </button>
-
-          <div
-            id="mensagemSalvarDados"
-            class="alert mensagem-feedback"
-            role="alert"
-          ></div>
         </form>
 
         <div class="border-top mt-2 mb-3"></div>
-
-        <!-- <hr /> -->
 
         <!-- Bloco: Alterar Senha -->
         <form id="formAlterarSenha">
@@ -134,11 +128,6 @@
               required
               placeholder="Confirme a nova senha"
             />
-            <!--
-            <div class="error-message" id="senhaMismatchError">
-              As novas senhas não coincidem.
-            </div>            
-            -->
           </div>
 
           <button type="submit" class="btn btn-primary w-100">
@@ -150,13 +139,45 @@
             role="alert"
           ></div>
         </form>
-        <!-- 
-      <div id="mensagemSistema" class="alert d-none mt-1" role="alert"></div>
-      -->
+
         <div class="text-center mt-1">
           <a class="text-decoration-none text-success" href="index.html">
             <i class="fas fa-arrow-left me-2"></i>Voltar ao Menu Principal
           </a>
+        </div>
+      </div>
+    </div>
+    <!-- Modal de Alerta Global -->
+    <div
+      class="modal fade"
+      id="modalMensagemSistema"
+      tabindex="-1"
+      aria-labelledby="modalMensagemSistemaTitulo"
+      aria-hidden="true"
+    >
+      <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-content">
+          <div class="modal-header bg-warning text-dark">
+            <h5 class="modal-title" id="modalMensagemSistemaTitulo">Aviso</h5>
+            <button
+              type="button"
+              class="btn-close"
+              data-bs-dismiss="modal"
+              aria-label="Fechar"
+            ></button>
+          </div>
+          <div class="modal-body text-pre-wrap">
+            <!-- Conteúdo da mensagem será inserido via JS -->
+          </div>
+          <div class="modal-footer">
+            <button
+              type="button"
+              class="btn btn-primary"
+              data-bs-dismiss="modal"
+            >
+              OK
+            </button>
+          </div>
         </div>
       </div>
     </div>
