Finalmente mensagens insercao novo usuario funcionando, alterei controller adiciona usuario para validar repeticao de senha, não somente no FE

--- a/frontend/src/main/webapp/index.html
+++ b/frontend/src/main/webapp/index.html
@@ -172,7 +172,7 @@
             De Usuários</a>
           <div class="collapse" id="menu-perfil">
             <ul class="nav flex-column ms-3">
-              <li class="nav-item" id="menuCadastrarUsuario" data-role-allowed="ADMIN">
+              <li class="nav-item" id="menuListaUsuarios" data-role-allowed="ADMIN">
                 <a class="nav-link" href="#"
                   onclick="FiberGuardian.Core.carregarPagina('tela_lista_cadastro_usuario.html')">Listar Usuarios</a>
               </li>
