--- a/frontend/src/main/webapp/login.html
+++ b/frontend/src/main/webapp/login.html
@@ -4,11 +4,11 @@
 <head>
   <meta charset="UTF-8" />
   <title>Login - FiberGuardian</title>
+  <link rel="stylesheet" href="assets/css/normalize.css" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
   <!-- Bootstrap Bundle (com Modal e Popper) -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" rel="stylesheet" />
-  <link rel="stylesheet" href="assets/css/fiberguardian_utils.css" />
   <link rel="stylesheet" href="assets/css/login.css" />
 </head>
 
