--- a/frontend/src/main/webapp/tela_cadastro_usuario.html
+++ b/frontend/src/main/webapp/tela_cadastro_usuario.html
@@ -5,6 +5,7 @@
   <meta charset="utf-8" />
   <meta content="width=device-width, initial-scale=1" name="viewport" />
   <title>Cadastro de Usuário</title>
+  <link rel="stylesheet" href="assets/css/normalize.css" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet" />
   <style>
@@ -65,10 +66,6 @@
       font-size: 0.8rem;
       border-radius: 0.25rem;
       /* reduz arredondamento */
-    }
-
-    .text-success {
-      font-size: 0.85rem;
     }
   </style>
 </head>
@@ -157,7 +154,6 @@
         <button class="btn btn-primary w-100 mb-2" type="submit">
           <i class="fas fa-user-plus me-2"></i>Criar Conta
         </button>
-
         <div class="text-center mt-3">
           <a class="text-decoration-none text-success" href="index.html">
             <i class="fas fa-arrow-left me-2"></i>Voltar ao Menu Principal
