--- a/frontend/src/main/webapp/tela_esqueci_senha.html
+++ b/frontend/src/main/webapp/tela_esqueci_senha.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <script src="assets/js/fiberguardian_utils.js" defer></script>
     <title>Recuperar Senha - FiberGuardian</title>
+    <link rel="stylesheet" href="assets/css/normalize.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
