--- a/frontend/src/main/webapp/index.html
+++ b/frontend/src/main/webapp/index.html
@@ -119,6 +119,7 @@
 
       <!-- Menu começa aqui -->
       <ul class="nav nav-pills flex-column" id="menu">
+        <!--
         <li class="nav-item">
           <a class="nav-link" data-bs-toggle="collapse" href="#menu-cadastros" role="button"
             aria-expanded="false">Cadastros</a>
@@ -137,7 +138,25 @@
             </ul>
           </div>
         </li>
+      -->
 
+        <li class="nav-item">
+          <a class="nav-link" data-bs-toggle="collapse" href="#submenu-recebimentos" role="button"
+            aria-expanded="false">Recebimentos</a>
+          <div class="collapse" id="submenu-recebimentos">
+            <ul class="nav flex-column ms-3">
+              <li class="nav-item">
+                <a class="nav-link" href="#"
+                  onclick="FiberGuardian.Core.carregarPagina('tela_cadastro_recebimento.html')">Novo Recebimento</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#"
+                  onclick="FiberGuardian.Core.carregarPagina('tela_pesquisa_recebimento.html')">Pesquisar
+                  Recebimentos</a>
+              </li>
+            </ul>
+          </div>
+        </li>
         <li class="nav-item mt-2">
           <a class="nav-link" data-bs-toggle="collapse" href="#menu-laboratorio" role="button"
             aria-expanded="false">Laboratório</a>
